<resources>
    <string name="app_name">Math</string>
    <string name="action_settings">Settings</string>
    <string name="action_stats">Stats</string>

    <string name="start_button_text">Go!</string>
    <string name="play_again_button_text">Play again!</string>

    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>

    <string name="scores_table_column_heading_1">Problem</string>
    <string name="scores_table_column_heading_2">Correct\nSolution</string>
    <string name="scores_table_column_heading_3">Your\nSolution</string>
    <string name="scores_table_column_heading_4">Correct?</string>


    <string name="key_addition_enable">addition_enable</string>
    <string name="addition_summary_on">Addition questions are asked.</string>
    <string name="addition_summary_off">No addition questions are asked.</string>
    <string name="title_addition_setting">Addition</string>

    <string name="key_subtraction_enable">subtraction_enable</string>
    <string name="subtraction_summary_on">Subtraction questions are asked.</string>
    <string name="subtraction_summary_off">No subtraction questions are asked.</string>
    <string name="title_subtraction_setting">Subtraction</string>

    <string name="key_multiplication_enable">multiplication_enable</string>
    <string name="multiplication_summary_on">Multiplication questions are asked.</string>
    <string name="multiplication_summary_off">No multiplication questions are asked.</string>
    <string name="title_multiplication_setting">Multiplication</string>

    <string name="key_division_enable">division_enable</string>
    <string name="division_summary_on">Division questions are asked.</string>
    <string name="division_summary_off">No division questions are asked.</string>
    <string name="title_division_setting">Division</string>

    <string name="key_permutation_enable">permutation_enable</string>
    <string name="permutation_summary_on">Permutation questions are asked.</string>
    <string name="permutation_summary_off">No permutation questions are asked.</string>
    <string name="title_permutation_setting">Permutation</string>

    <string name="key_combination_enable">combination_enable</string>
    <string name="combination_summary_on">Combination questions are asked.</string>
    <string name="combination_summary_off">No combination questions are asked.</string>
    <string name="title_combination_setting">Combination</string>

    <string name="default_value_true">true</string>
    <string name="key_numbers_bound">numbers_bound</string>
    <string name="numbers_bound_summary">Ask questions with numbers within this limit. Tap to change.</string>
    <string name="title_numbers_bound_default" >Numbers Limit</string>

    <string name="summary_numbers_bound" formatted="true">Ask questions with numbers within %1$s only. Tap to change.</string>
    <string name="summary_numbers_bound_permutation" formatted="true">Ask permutation and combination questions within %1$s only. The range is from 1 to 12. Tap to change.</string>

    <string name="key_numbers_bound_permutation">numbers_bound_permutation</string>
    <string name="numbers_bound_summary_permutation">Ask permutation and combination questions within this limit only. The range is from 1 to 12. Tap to change.</string>
    <string name="title_numbers_bound_permutation_default" >Permutation and Combination Numbers Limit</string>

    <string name="invalid_string_permutation">Unable to set new value! Use integer numbers in range 10 to 12.</string>

    <string name="user_stats">User Stats</string>
    <string name="stats_menu_title">Stats</string>
    <string name="title_activity_intro_slider">introSlider</string>
    <string name="intro_slide_text_1">Practice your arithmetic skills!\nGive your answers to the questions asked.</string>
    <string name="intro_slide_text_2">Review your answers after every ten questions.</string>
    <string name="intro_slide_text_3">Set question preferences in settings.</string>
    <string name="info">Info</string>
    <string name="app_icon_content_description">App Icon</string>
    <string name="finish_content_description">Finish</string>
    <string name="first_indicator_content_description">First indicator</string>
    <string name="second_indicator_content_description">Second indicator</string>
    <string name="third_indicator">Third indicator</string>

</resources>
